rework init methods for mob effect renderer